--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,46 @@
     <string name="app_name">DogPaw</string>
     <string name="open">Open</string>
     <string name="close">Close</string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
+
+    <string name="login">Login</string>
+    <string name="forgot_password">Forgot Password ?</string>
+    <string name="dont_have_an_account">Don\'t have an account ?</string>
+    <string name="signup">Sign Up</string>
+    <string name="special_request">You Have A Special  Request ?</string>
+    <string name="req_quote">Request A Quote</string>
+    <string name="contact_us">Contact Us</string>
+    <string name="follow_us">Follow Us</string>
+    <string name="firstname">First Name*</string>
+    <string name="lastname">Last Name*</string>
+    <string name="country">Country*</string>
+    <string name="phone">Phone*</string>
+    <string name="subject">Subject</string>
+    <string name="yourmsg">Your Message*</string>
+    <string name="button_send">Send</string>
+    <string name="daycare">Dog Daycare Management</string>
+    <string name="all_packages">All Packages</string>
+    <string name="add_packages">Add Packages</string>
+    <string name="update_packages">Update Packages</string>
+    <string name="delete_packages">Delete Packages</string>
+    <string name="package_id">Package ID</string>
+    <string name="package_name">Package Name</string>
+    <string name="description">Description</string>
+    <string name="package_cost">Package Cost</string>
+    <string name="add">Add</string>
+    <string name="update">Update</string>
+    <string name="delete">Delete</string>
+    <string name="how_many_dogs">How many dogs do you need to taken care of ?</string>
+    <string name="breed">Which breed is it ?</string>
+    <string name="select_one">Select One</string>
+    <string name="size">What is the size of your dog ?</string>
+    <string name="sitter">Anything else the sitter will need to know ?</string>
+    <string name="starting_date">Plese pick starting date of the service</string>
+    <string name="days">Number of days required ?</string>
+    <string name="dog_care">Dog Daycare</string>
+    <string name="select_package">Select the package you prefer ?</string>
+    <string name="easy">Easy</string>
+    <string name="easy_">Easy+</string>
+    <string name="premium">Premium</string>
 </resources>
