--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,7 +34,6 @@
     <string name="n_photography_form_forth">Type of phto needed to be taken*</string>
     <string name="n_photography_fifth">Most preffered time of day*</string>
     <string name="n_photography_six">Final image format*</string>
-    <string name="contact_us">Contact Us</string>
     <string name="hintFname">Full Name</string>
     <string name="hintLname">Last Name</string>
     <string name="hintPhone">Phone</string>
@@ -52,10 +51,11 @@
     <string name="hintSize">What is the size of your dog ?</string>
     <string name="hintSitter">Anything else the sitter will need to know ?</string>
     <string name="hintDays">Number of days required ?</string>
-    <string name="SaveB">SAVE</string>
     <string name="showB">View</string>
-    <string name="UpdB">Update</string>
     <string name="DelB">Delete</string>
+    <string name="contact_us">Get In Touch</string>
+    <string name="SaveB">REQUEST</string>
+    <string name="UpdB">Update request</string>
 
 
 </resources>
